group specific preditions
